# EspBase

./: .cproject  .project  CMakeLists.txt  README.md  dump.tmp  partitions.csv  sdkconfig  sdkconfig.old  wasm_code.md
Docs/: NAPT.md  port_mapping.c  staticIp.example.c
certs/: ca.txt  ca_cert.pem  ca_key.pem
components/HttpModule/: CMakeLists.txt
components/HttpModule/include/: HttpModule.h  HttpModuleController.h
components/HttpModule/include/Hardware/: HardwareModule.h
components/HttpModule/include/Network/: NetworkModule.h
components/HttpModule/include/Preferences/: PreferencesModule.h
components/HttpModule/include/Wasm/: WasmModule.h
components/HttpModule/src/: HttpModule.cpp  HttpModuleController.cpp
components/HttpModule/src/Hardware/: HardwareModule.cpp  Hardware_API.md
components/HttpModule/src/Network/: NetworkModule.cpp
components/HttpModule/src/Preferences/: PreferencesModule.cpp
components/HttpModule/src/Wasm/: WasmModule.cpp
components/NetworkController/: CMakeLists.txt
components/NetworkController/include/: NetworkController.h  TcpTaskHandlerT.h
components/NetworkController/include/TcpTaskHandlerT/: tcp_echo_task_handler.h  tcp_proxy_task_handler.h  tcp_raw_transceiver_task_handler.h  tcp_transceiver_task_handler.h
components/NetworkController/src/: NetworkController.cpp  NetworkControllerTcp.cpp  TcpTaskHandlerT.cpp  TcpTaskHandlers.cpp
components/NetworkController/src/TcpHandlers/: Echo.cpp  Proxy.cpp  RawTransceiver.cpp  Transceiver.cpp
examples/: framework.h  framework_tests.c
main/: CMakeLists.txt  main.cpp  (+2 more)
(+43 files in other folders)
